# grobid

./: .flake8  .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: conf.py  index.rst
src/grobid/: client.py  tei.py
src/grobid/models/: __init__.py  article.py  citation.py  form.py  json.py  misc.py  response.py  section.py
tests/test_grobid/: test_client.py  test_tei.py
tests/test_grobid/test_models/: test_citation.py  test_form.py  test_json.py
